src/ui/sass/trumbowyg.scss
@import "sprite-black";
@import "sprite-black-2x";
@import "sprite-white";
@import "sprite-white-2x";

@import "mixins/sprite-pos";

$light-color: #ecf0f1;
$dark-color: #222;



.trumbowyg-box {
    *,
    *::before,
    *::after {
        box-sizing: border-box;
    }
}
.trumbowyg-box,
.trumbowyg-editor {
    display: block;
    position: relative;
    border: 1px solid #DDD;
    width: 96%;
    min-height: 300px;
    margin: 17px auto;
}
.trumbowyg-box .trumbowyg-editor {
    margin: 0 auto;
}
.trumbowyg-box.trumbowyg-fullscreen {
    background: #FEFEFE;
}
.trumbowyg-editor,
.trumbowyg-textarea {
    position: relative;
    box-sizing: border-box;
    padding: 1% 2%;
    min-height: 300px;
    width: 100%;
    border-style: none;
    resize: none;
    outline: none;
}
.trumbowyg-box-blur .trumbowyg-editor {
    * {
        color: transparent !important;
        text-shadow: 0 0 7px #333;
    }
    img {
        opacity: .2;
    }
}
.trumbowyg-textarea {
    position: relative;
    display: block;
    overflow: auto;
    border: none;
    white-space: normal;
    font-size: 14px;
    font-family: "Inconsolata", "Consolas", "Courier", "Courier New", sans-serif;
    line-height: 18px;
}
.trumbowyg-box.trumbowyg-editor-visible {
    .trumbowyg-textarea {
        position: absolute;
        top: 37px;
        height: 1px !important;
        width: 25%;
        min-height: 0 !important;
        padding: 0 !important;
        background: none;
        opacity: 0;
    }
}
.trumbowyg-box.trumbowyg-editor-hidden {
    .trumbowyg-textarea {
        display: block;
    }
    .trumbowyg-editor {
        display: none;
    }
}
.trumbowyg-editor[contenteditable=true]:empty:before{
    content: attr(placeholder);
    color: #999;
}

.trumbowyg-button-pane {
    position: relative;
    width: 100%;
    background: $light-color;
    border-bottom: 1px solid darken($light-color, 7%);
    margin: 0;
    padding: 0;
    list-style-type: none;
    line-height: 10px;
    backface-visibility: hidden;

    li {
        display: inline-block;
        text-align: center;
        overflow: hidden;
        padding: 0 !important;

        &.trumbowyg-separator {
            width: 1px;
            background: darken($light-color, 7%);
            margin: 0 5px;
            height: 35px;
        }
    }

    &.trumbowyg-disable {
        li:not(.trumbowyg-not-disable) button:not(.trumbowyg-active) {
            opacity: .2;
            cursor: default;
        }
        li.trumbowyg-separator {
            background: darken($light-color, 3%);
        }
    }

    li button {
        padding: 1px 6px !important;
        // At bottom of this stylesheet
    }

    &:not(.trumbowyg-disable) li button:hover,
    &:not(.trumbowyg-disable) li button:focus,
    li button.trumbowyg-active,
    li.trumbowyg-not-disable button:hover,
    li.trumbowyg-not-disable button:focus {
        background-color: #FFF;
        outline: none;
    }

    li .trumbowyg-open-dropdown:after {
        display: block;
        content: " ";
        position: absolute;
        top: 25px;
        right: 3px;
        height: 0;
        width: 0;
        border: 3px solid transparent;
        border-top-color: #555;
    }

    .trumbowyg-buttons-right {
        float: right;
        width: auto;

        button {
            float: left;
        }
    }
}

.trumbowyg-dropdown {
    width: 200px;
    border: 1px solid $light-color;
    padding: 5px 0;
    border-top: none;
    background: #FFF;
    margin-left: -1px;
    box-shadow: rgba(0, 0, 0, .1) 0 2px 3px;

    button {
        display: block;
        width: 100%;
        height: 35px;
        line-height: 35px;
        text-decoration: none;
        background: #FFF;
        padding: 0 14px;
        color: #333 !important;
        border: none;
        cursor: pointer;
        text-align: left;
        font-size: 15px;
        transition: all .15s;

        &:hover,
        &:focus {
            background: $light-color;
        }
    }
}


/* Modal box */
.trumbowyg-modal {
    position: absolute;
    top: 0;
    left: 50%;
    margin-left: -260px;
    width: 520px;
    height: 350px;
    z-index: 11;
    overflow: hidden;
    backface-visibility: hidden;
}
/* ... */

